--- a/VendasSpringWebJPA/build.gradle
+++ b/VendasSpringWebJPA/build.gradle
@@ -27,4 +27,11 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	runtime('com.h2database:h2')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	    compile("org.springframework.boot:spring-boot-starter-thymeleaf")
+    // tag::security[]
+    compile("org.springframework.boot:spring-boot-starter-security")
+    // end::security[]
+    testCompile("junit:junit")
+    testCompile("org.springframework.boot:spring-boot-starter-test")
+    testCompile("org.springframework.security:spring-security-test")
 }
