--- a/VendasSpringWebJPA/build.gradle
+++ b/VendasSpringWebJPA/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 	runtime('com.h2database:h2')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	    compile("org.springframework.boot:spring-boot-starter-thymeleaf")
+    compile("org.springframework.boot:spring-boot-devtools")
     // tag::security[]
     compile("org.springframework.boot:spring-boot-starter-security")
     // end::security[]
