--- a/VendasSpringWebJPA/bin/application.properties
+++ b/VendasSpringWebJPA/bin/application.properties
@@ -1,3 +1,10 @@
-spring.h2.console.enabled=true
 
 logging.level.org.hibernate.SQL=debug
+
+spring.jpa.hibernate.ddl-auto=create
+
+
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+spring.datasource.username=ANONYMOUS
+spring.datasource.password=123456
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
